[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
authors = ["Yuki Yamaura <ymruki@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Enables enums and structs to be callable by associating functions with their variants or fields."
homepage = "https://github.com/yamaura/argcall"
repository = "https://github.com/yamaura/argcall"

[workspace.metadata.release]
push = false
#tag-name = "{{prefix}}{{version}}"
tag-name = "{{version}}"
pre-release-commit-message = "Bump version to {{version}}"
tag-message = "{{tag_name}}"

[workspace.metadata.docs.rs]
all-features = true

[workspace.dependencies]
thiserror = "1"
