[package]
name = "argcall"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
argcall_derive = { path = "../argcall_derive", version = "=0.4.0" }
thiserror = { workspace = true }

[dev-dependencies]
pollster = "0.4.0"

[features]
default = []
async = []
